--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -79,12 +79,17 @@ Size=353,424
 Collapsed=0
 
 [Window][Simulation Speed]
-Pos=374,376
+Pos=375,8
 Size=338,94
-Collapsed=0
+Collapsed=1
 
 [Window][Camera]
-Pos=13,244
-Size=181,226
-Collapsed=0
+Pos=12,157
+Size=273,226
+Collapsed=1
+
+[Window][Light]
+Pos=12,10
+Size=234,140
+Collapsed=1
 
